--- a/app/src/main/res/layout/fragment_acerca_de.xml
+++ b/app/src/main/res/layout/fragment_acerca_de.xml
@@ -19,32 +19,111 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-light"
+                android:paddingTop="30dp"
+                android:text="Acerca de"
+                android:textAlignment="center"
+                android:textColor="#392884"
+                android:textSize="23sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-light"
+                android:paddingTop="15dp"
+                android:text="Proposito de la aplicación"
+                android:textAlignment="center"
+                android:textColor="#392884"
+                android:textSize="23sp" />
+
+            <TextView
+                android:layout_width="388dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="@font/open_sans_light"
+                android:paddingTop="15dp"
+                android:text="JobsHunters es una plataforma de busqueda de empleos y pasantias digirida a los estudiantes de la Universidad de Managua (UdeM). Con ella, los estudiantes podran buscar ofertas de trabajo, y ademas, van a poder adquirir conocimientos acerca de la busqueda de empleos en la seccion de recursos de aprendizaje ofrecida por la aplicacion."
+                android:textColor="#524B6B"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-light"
+                android:paddingTop="15dp"
+                android:text="Licencias de Software "
+                android:textAlignment="center"
+                android:textColor="#392884"
+                android:textSize="23sp" />
+            <TextView
+                android:layout_width="388dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="@font/open_sans_light"
+                android:paddingTop="15dp"
+                android:text="El código fuente de la aplicación móvil JobsHunters es de código abierto con la licencia de software MIT. Puedes ver el código, modificarlo y redistribuirlo. El URL del repositorio del código es este https://github.com/CLettuce/JobsHunters"
+                android:textColor="#524B6B"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:autoLink="web"
+                android:linksClickable="true" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-light"
+                android:paddingTop="15dp"
+                android:text="Equipo de Trabajo"
+                android:textAlignment="center"
+                android:textColor="#392884"
+                android:textSize="23sp"
+                android:paddingBottom="20dp"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                app:cardElevation="5dp"
+                app:cardBackgroundColor="#99FFFFFF"
                 app:cardCornerRadius="5dp"
-                >
+                app:cardElevation="5dp">
 
                 <ImageView
-                    android:layout_width="1in"
-                    android:layout_height="1in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:elevation="3dp"
-                    android:src="@drawable/carlos"/>
+                    android:src="@drawable/carlos" />
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="1.1in"
-                    android:textSize="23sp"
-                    android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:textColor="@color/purple_700"
-                    android:text="PRUEBA"/>
+                    android:paddingLeft="90dp"
+                    android:text="Carlos R. López"
+                    android:textColor="#303A52"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="90dp"
+                    android:paddingTop="25sp"
+                    android:text="Analista y desarrollador de software\nCorreo: passipan02@gmail.com\nGithub: https://github.com/CLettuce"
+                    android:textColor="#303A52"
+                    android:textSize="15sp" />
+
+
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -52,26 +131,36 @@
                 android:layout_margin="5dp"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="#99FFFFFF"
                 >
 
+
                 <ImageView
-                    android:layout_width="1in"
-                    android:layout_height="1in"
+                    android:layout_width="77dp"
+                    android:layout_height="67dp"
                     android:layout_margin="5dp"
-
                     android:elevation="3dp"
-                    android:src="@drawable/edwing"/>
-
+                    android:src="@drawable/edwing" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="1.1in"
-                    android:textSize="23sp"
+                    android:paddingLeft="90dp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:textColor="@color/purple_700"
-                    android:text="PRUEBA"/>
+                    android:textColor="#303A52"
+                    android:text="Edwin García"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="90dp"
+                    android:paddingTop="25sp"
+                    android:text="Analista y desarrollador de software\nCorreo: egarciavalle2014@gmail.com\nGithub: https://github.com/Edwing123"
+                    android:textColor="#303A52"
+                    android:textSize="15sp" />
+
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -79,26 +168,36 @@
                 android:layout_margin="5dp"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="#99FFFFFF"
                >
 
                 <ImageView
-                    android:layout_width="1in"
-                    android:layout_height="1in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
 
                     android:elevation="3dp"
-                    android:src="@drawable/elias"/>
+                    android:src="@drawable/elias" />
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="1.1in"
-                    android:textSize="23sp"
+                    android:paddingLeft="90dp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:textColor="@color/purple_700"
-                    android:text="PRUEBA"/>
+                    android:textColor="#303A52"
+                    android:text="Elías Castillo"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="90dp"
+                    android:paddingTop="25sp"
+                    android:textSize="15sp"
+                    android:textColor="#303A52"
+                    android:text="Analista y desarrollador de software\nCorreo:elias.castillo2016374@udem.edu.ni\n"/>
+
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -106,50 +205,70 @@
                 android:layout_margin="5dp"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="#99FFFFFF"
                 >
 
                 <ImageView
-                    android:layout_width="1in"
-                    android:layout_height="1in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:elevation="3dp"
-                    android:src="@drawable/enamnuel"/>
+                    android:src="@drawable/enamnuel" />
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="1.1in"
-                    android:textSize="23sp"
+                    android:paddingLeft="90dp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:textColor="@color/purple_700"
-                    android:text="PRUEBA"/>
+                    android:textColor="#303A52"
+                    android:text="Enmanuel Olivas"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="90dp"
+                    android:paddingTop="25sp"
+                    android:textSize="15sp"
+                    android:textColor="#303A52"
+                    android:text="Analista y desarrollador de software\nCorreo: enmanuel.olivas202889@udem.edu.ni"/>
+
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 app:cardElevation="5dp"
-                app:cardCornerRadius="5dp">
+                app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="#99FFFFFF">
 
                 <ImageView
-                    android:layout_width="1in"
-                    android:layout_height="1in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:elevation="3dp"
-                    android:src="@drawable/kenroy"/>
+                    android:src="@drawable/kenroy" />
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="1.1in"
-                    android:textSize="23sp"
+                    android:paddingLeft="90dp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:textColor="@color/purple_700"
-                    android:text="PRUEBA"/>
+                    android:textColor="#303A52"
+                    android:text="Sherk"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="90dp"
+                    android:paddingTop="25sp"
+                    android:textSize="15sp"
+                    android:textColor="#303A52"
+                    android:text="Analista y desarrollador de software\nCorreo: kenmayorga12@gmail.com\nGithub: https://github.com/AlexNorori"/>
+
             </androidx.cardview.widget.CardView>
 
 
