--- a/app/src/main/res/layout/fragment_acerca_de.xml
+++ b/app/src/main/res/layout/fragment_acerca_de.xml
@@ -46,7 +46,7 @@
                 android:layout_width="388dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:fontFamily="@font/open_sans_light"
+                android:fontFamily=""
                 android:paddingTop="15dp"
                 android:text="JobsHunters es una plataforma de busqueda de empleos y pasantias digirida a los estudiantes de la Universidad de Managua (UdeM). Con ella, los estudiantes podran buscar ofertas de trabajo, y ademas, van a poder adquirir conocimientos acerca de la busqueda de empleos en la seccion de recursos de aprendizaje ofrecida por la aplicacion."
                 android:textColor="#524B6B"
@@ -66,7 +66,7 @@
                 android:layout_width="388dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:fontFamily="@font/open_sans_light"
+                android:fontFamily=""
                 android:paddingTop="15dp"
                 android:text="El código fuente de la aplicación móvil JobsHunters es de código abierto con la licencia de software MIT. Puedes ver el código, modificarlo y redistribuirlo. El URL del repositorio del código es este https://github.com/CLettuce/JobsHunters"
                 android:textColor="#524B6B"
