--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,35 +8,28 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <SearchView
+
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/searchBox"
-        android:layout_width="347dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/search_view_bg"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
         android:queryHint="Qué buscas?"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
-        android:id="@+id/noDataTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No hay datos disponibles"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/searchBox"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_mostarApi"
-        android:layout_width="353dp"
-        android:layout_height="544dp"
+        android:layout_width="381dp"
+        android:layout_height="588dp"
         app:flow_horizontalBias="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
