--- a/app/src/main/res/layout/offer_view.xml
+++ b/app/src/main/res/layout/offer_view.xml
@@ -15,7 +15,11 @@
         android:layout_marginBottom="4dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardBackgroundColor="#E3E5E6"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -25,7 +29,7 @@
                 android:id="@+id/imageViewProfile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/malettin"
+
                 android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -39,6 +43,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nombre"
+                android:maxLines="2"
+                android:ellipsize="end"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
                 app:layout_constraintTop_toTopOf="@+id/imageViewProfile"
                 android:layout_marginStart="8dp"
@@ -46,10 +53,10 @@
 
 
             <TextView
-                android:id="@+id/txtDescrip"
+                android:id="@+id/txtRole"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Descripción larga que podría salirse del CardView si no se maneja correctamente."
+                android:text="Role"
                 android:maxLines="2"
                 android:ellipsize="end"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
@@ -63,11 +70,27 @@
                 android:id="@+id/txtEmprese"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Estado"
+                android:text="Empresa"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
-                app:layout_constraintTop_toBottomOf="@+id/txtDescrip"
+                app:layout_constraintTop_toBottomOf="@+id/txtRole"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"/>
+
+            
+
+            <!-- Icono del corazón -->
+            <ImageView
+                android:id="@+id/iconoCorazon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/selector_corazon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:clickable="true"
+               />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
