API View Android Endpoint ID Offers

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#018C8B</color>
     <color name="black">#000000</color>
     <color name="white">#F4EFEF</color>
+    <color name="greenSoft">#4CAF50</color>
 </resources>
