--- a/app/src/main/res/layout/activity_offer_detail.xml
+++ b/app/src/main/res/layout/activity_offer_detail.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".offer_detail">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:text="Oferta"
+        android:textColor="#392884"
+        android:textSize="27dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imgLogoEmpresa"
         android:layout_width="149dp"
