--- a/app/src/main/res/layout/fragment_recurso.xml
+++ b/app/src/main/res/layout/fragment_recurso.xml
@@ -7,26 +7,42 @@
     android:layout_height="match_parent"
     android:background="#DDDDE2">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Recurso de Aprendizaje"
+        android:textColor="#392884"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/searchBox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.287"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91"
+        tools:ignore="MissingConstraints" />
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="16dp"
         android:iconifiedByDefault="false"
         android:queryHint="Qué buscas?"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:visibility="invisible"/>
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_mostrarRecurso"
-        android:layout_width="381dp"
-        android:layout_height="588dp"
+        android:layout_width="371dp"
+        android:layout_height="490dp"
         android:layout_marginBottom="72dp"
         app:flow_horizontalBias="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
